# cargo-indicate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
cargo-indicate/: Cargo.toml  README.md  rust-toolchain.toml
cargo-indicate/src/: main.rs  util.rs
cargo-indicate/tests/: trycmd.rs
cargo-indicate/tests/cmd/: dir_inout.toml  duplicate_query_name.toml  feature_combinations.md  gql_mixed_query.toml  gql_query.toml  multiple_outputs.toml  output_combinations.md  output_dir.md  recursive_output_dir.toml  show_schema.md  single_output.toml  workspace.toml
cargo-indicate/tests/cmd/dir_inout.out/queries/: version.in.ron
cargo-indicate/tests/cmd/dir_inout.out/results/: version.out.json
cargo-indicate/tests/cmd/gql_mixed_query.out/queries/: query.graphql
cargo-indicate/tests/cmd/gql_mixed_query.out/results/: query.out.json
cargo-indicate/tests/cmd/gql_query.in/dummy_crate/: Cargo.toml
cargo-indicate/tests/cmd/recursive_output_dir.in/: query.in.ron
cargo-indicate/tests/cmd/recursive_output_dir.out/results/nestled/: query.out.json
cargo-indicate/tests/cmd/single_output.out/results/: query.out.json
cargo-indicate/tests/cmd/workspace.out/dummy_workspace/: Cargo.toml
cargo-indicate/tests/cmd/workspace.out/dummy_workspace/dummy_crate/: Cargo.toml
cargo-indicate/tests/cmd/workspace.out/queries/: query.in.ron
indicate/: .env  .env.example  Cargo.toml
indicate/src/: adapter.rs  advisory.rs  code_stats.rs  crates_io.rs  dependency.rs  errors.rs  geiger.rs  github.rs  lib.rs  manifest.rs  node.rs  package.rs  query.rs  repo.rs  schema.trustfall.graphql  util.rs  vertex.rs
indicate/src/adapter/: adapter_builder.rs
indicate/src/repo/: github.rs
indicate/test_data/: README.md
indicate/test_data/fake_crates/dev_deps/: Cargo.toml
indicate/test_data/fake_crates/direct_dependencies/: Cargo.toml
indicate/test_data/fake_crates/feature_deps/: Cargo.toml
indicate/test_data/fake_crates/forbids_unsafe/: Cargo.toml
indicate/test_data/fake_crates/forbids_unsafe/src/: main.rs
indicate/test_data/fake_crates/known_advisory_deps/: Cargo.toml
indicate/test_data/fake_crates/simple_deps/: Cargo.toml
indicate/test_data/fake_crates/transitive_deps/: Cargo.toml
indicate/test_data/fake_crates/unsafe_crate/: Cargo.toml
indicate/test_data/fake_crates/unsafe_crate/src/: main.rs
indicate/test_data/geiger-output/: simple_deps.json
indicate/test_data/queries/: advisory_db_affected_funcs.in.ron  advisory_db_no_include_withdrawn.in.ron  advisory_db_simple.in.ron  advisory_db_with_parameters.in.ron  all_deps_code_stats.in.ron  all_deps_code_stats_only_src.in.ron  code_stats_simple.in.ron  count_dependencies.in.json  count_dependencies.in.ron  crates_io_counts.in.ron  dependencies_all_fields.in.ron  dependencies_all_fields_include_root.in.ron  dependency_package_info.expected.json  dependency_package_info.in.ron  dev_dependencies_excluded.in.ron  dev_dependencies_excluded_w_root_package.in.ron  direct_dependencies.expected.json  direct_dependencies.in.ron  geiger_advanced-false-crazy_unsafe.expected.json  geiger_advanced.in.ron  geiger_forbids_unsafe.expected.json  geiger_forbids_unsafe.in.ron  geiger_total_percentage.in.ron  github_owner.expected.json  github_owner.in.ron  github_simple.expected.json  github_simple.in.ron  list_direct_dependencies-false-a-b-c-d.expected.json  list_direct_dependencies-false-a-b.expected.json  list_direct_dependencies_w_root_package.in.ron  list_transitive_dependencies.in.ron  no_deps_all_fields.expected.json  no_deps_all_fields.in.ron  recursive_dependency.in.ron
indicate/test_data/queries_expected/: all_deps_code_stats.expected.json  all_deps_code_stats_only_src.expected.json  code_stats_simple.expected.json  count_dependencies.expected.json  dependencies_all_fields.expected.json  dependencies_all_fields_include_root.expected.json  dev_dependencies_excluded.expected.json  dev_dependencies_excluded_w_root_package.expected.json  direct_dependencies.expected.json  geiger_advanced-false-crazy_unsafe.expected.json  geiger_advanced.expected.json  geiger_total_percentage.expected.json  list_direct_dependencies-false-d.expected.json  list_transitive_dependencies.expected.json  recursive_dependency.expected.json
licenses/: cargo-local.LICENSE
