[package]
authors = ["Emil Jonathan Eriksson <eje1999@gmail.com>"]
name = "cargo-indicate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-indicate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["wrap_help", "derive"] }
indicate = { path = "../indicate", version = "^0.1.0" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.93"

[dev-dependencies]
trycmd = "0.14.12"
