[package]
authors = ["Emil Jonathan Eriksson <eje1999+cargo-indicate@gmail.com>"]
name = "cargo-indicate"
version = "0.2.1"
edition = "2021"
description = "Crate for running GraphQL queries on Rust dependency trees"
keywords = ["cargo", "cli", "search", "dependencies", "graphql"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/volvo-cars/cargo-indicate"

[[bin]]
name = "cargo-indicate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["wrap_help", "derive"] }
indicate = { path = "../indicate", version = "^0.2.0" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.93"

[dev-dependencies]
trycmd = "0.14.12"
test-case = "3.0.0"
