[package]
authors = ["Emil Jonathan Eriksson <eje1999@gmail.com>"]
name = "indicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
trustfall = { git = "https://github.com/ginger51011/trustfall" }
serde = { version = "^1.0", features = ["derive"] }
cargo_metadata = "0.15.3"
octorust = { version = "0.3", features = ["httpcache"] }
reqwest = "0.11.14"
once_cell = "1.17.1"
tokio = "1.25.0"
git-url-parse = "0.4.4"
rustsec = "0.26.4"

[dev-dependencies]
test-case = "3.0.0"
serde_json = "1.0.93"
