[package]
authors = ["Emil Jonathan Eriksson <eje1999@gmail.com>"]
name = "indicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = { git = "https://github.com/ginger51011/trustfall", rev = "1ecd1ff" }
# TODO: Remove locking after this is resolved https://github.com/serde-rs/serde/issues/2415
serde = { version = "=1.0.156", features = ["derive"] }
ron = "0.8.0"
serde_json = "1.0.93"
cargo_metadata = "0.15.3"
octorust = { version = "0.3", features = ["httpcache", "rustls-tls"] }
reqwest = "0.11.14"
once_cell = "1.17.1"
tokio = "1.25.0"
git-url-parse = "0.4.4"
rustsec = "0.26.4"
cvss = "2.0.0"
thiserror = "1.0.38"
chrono = "0.4.23"
cargo_toml = "0.15.2"
walkdir = "2"
cargo = "0.69.0"
dirs = "5.0.0"

[dev-dependencies]
test-case = "3.0.0"
global_counter = { version = "0.2.2", default-features = false }
