[package]
authors = ["Emil Jonathan Eriksson <eje1999+cargo-indicate@gmail.com>"]
name = "indicate"
version = "0.2.0"
edition = "2021"
description = "Library behind cargo-indicate"
keywords = ["cargo", "search", "dependencies", "graphql"]
categories = ["development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
cargo_metadata = "0.15"
octorust = { version = "0.3", features = ["httpcache", "rustls-tls"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
once_cell = "1.11"
tokio = "1.25"
rustsec = "0.26"
cvss = "2.0"
thiserror = "1.0"
chrono = "0.4"
cargo_toml = "0.15"
walkdir = "2"
tokei = "12.1"
url = "2.3"
crates_io_api = { version = "0.8", default-features = false, features = ["rustls"] }

[dev-dependencies]
test-case = "3.0.0"
global_counter = { version = "0.2.2", default-features = false }
