[package]
authors = ["Charlie Chaplin"]
name = "unsafe_crate"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
crazy_unsafe = [] # Enable at your own risk!

[dependencies]
libc = "0.2.139"